TA FUNCIONANDO O BACK END KRL

--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,24 @@
 	     	<artifactId>mysql-connector-j</artifactId>
 	    	<version>8.0.32</version>
 	  	</dependency>
+	  	
+	  	<!-- Gerador de JWT -->	 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+			
+			<!-- 
+				Descomente para usar uma base H2 (em memória) para os testes
+				Quando descomentar, também troque as anotações @SpringBootTest por @DataJpaTest
+				em todos as classes *RepositoryTest
+			-->
+<!--		<dependency>-->
+<!--		    <groupId>com.h2database</groupId>-->
+<!--		    <artifactId>h2</artifactId>-->
+<!--		    <scope>test</scope>-->
+<!--		</dependency>-->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -59,6 +73,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		
+		 <!-- Swagger com OpenAPI  
+	     	acessar via :  http://localhost:8080/swagger-ui.html
+	     -->
+		<dependency>
+		   <groupId>org.springdoc</groupId>
+		   <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		   <version>2.7.0</version>
 		</dependency>
 	</dependencies>
 
