--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=senac-dev-backend-rivaldo-dev
+spring.datasource.url=jdbc:mysql://localhost:3306/rivaldo?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&useTimezone=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
